# step-io-blueprint

./: .gitattributes  .gitignore  Cargo.toml  ENTITY_CATALOG.md  INFER_TUNING.md  LICENSE  README.md  entity_catalog.json  groups.toml
inferred/: abstract_entities.toml  anchors.toml  arenas.toml  arenas_overrides.toml  arenas_pruned.toml  concrete_supertype_styles.toml  corpus_usage.toml  early.toml  entities.toml  ir.toml  merges.toml  names.toml  pools.toml  prune_overrides.toml  recasts.toml  shapes.toml  splits.toml  universal.toml  usage.toml  variants.toml  variants_enum_root.toml  variants_overrides.toml  variants_pruned.toml
profiles/: ap203e2.toml  ap214e3.toml  ap242e2.toml  ap242ed2.toml
schemas/: NOTICE.md  ap242e2.exp  ap242e3.exp  ap242ed2_dis2_mim_lf_v1.101.exp  ap242ed3_mim_lf_v1.152.exp
src/: catalog.rs  check.rs  express.rs  inheritance.rs  main.rs  step_io_scan.rs
src/express/: supertype_parser.rs
src/infer/: arena.rs  concrete_supertype_style.rs  export_common.rs  io.rs  l1_export.rs  mod.rs  naming.rs  overrides.rs  pool.rs  profile_export.rs  prune.rs  refgraph.rs  reshape.rs  shape.rs  universal_export.rs  variant.rs
